// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Render: after remove 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [],
  "content": null,
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [
        VNode {
          "attributes": undefined,
          "children": Array [
            VNode {
              "attributes": undefined,
              "children": Array [
                VNode {
                  "attributes": Object {
                    "text": "myText",
                  },
                  "children": Array [],
                  "key": undefined,
                  "nodeName": "label",
                },
              ],
              "key": undefined,
              "nodeName": "stackLayout",
            },
          ],
          "key": undefined,
          "nodeName": "scrollView",
        },
      ],
      "key": undefined,
      "nodeName": "page",
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": undefined,
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              VNode {
                "attributes": Object {
                  "text": "myText",
                },
                "children": Array [],
                "key": undefined,
                "nodeName": "label",
              },
            ],
            "key": undefined,
            "nodeName": "stackLayout",
          },
        ],
        "key": undefined,
        "nodeName": "scrollView",
      },
    ],
    "key": undefined,
    "nodeName": "page",
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Basic Render: basic renderA 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    ScrollView {
      "__n": "scrollView",
      "__preactattr_": Object {},
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        StackLayout {
          "__n": "stackLayout",
          "__preactattr_": Object {},
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [
            Label {
              "__n": "label",
              "__preactattr_": Object {
                "text": "myText",
              },
              "_eventListener": Array [],
              "attributes": Array [],
              "childNodes": Array [],
              "firstLoad": true,
              "loaded": false,
              "nodeName": "LABEL",
              "nodeType": 1,
              "parentNode": [Circular],
              "set": [Function],
              "text": "myText",
            },
          ],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "STACKLAYOUT",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
        },
      ],
      "content": StackLayout {
        "__n": "stackLayout",
        "__preactattr_": Object {},
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [
          Label {
            "__n": "label",
            "__preactattr_": Object {
              "text": "myText",
            },
            "_eventListener": Array [],
            "attributes": Array [],
            "childNodes": Array [],
            "firstLoad": true,
            "loaded": false,
            "nodeName": "LABEL",
            "nodeType": 1,
            "parentNode": [Circular],
            "set": [Function],
            "text": "myText",
          },
        ],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "STACKLAYOUT",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
      },
      "firstLoad": true,
      "loaded": false,
      "nodeName": "SCROLLVIEW",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": ScrollView {
    "__n": "scrollView",
    "__preactattr_": Object {},
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      StackLayout {
        "__n": "stackLayout",
        "__preactattr_": Object {},
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [
          Label {
            "__n": "label",
            "__preactattr_": Object {
              "text": "myText",
            },
            "_eventListener": Array [],
            "attributes": Array [],
            "childNodes": Array [],
            "firstLoad": true,
            "loaded": false,
            "nodeName": "LABEL",
            "nodeType": 1,
            "parentNode": [Circular],
            "set": [Function],
            "text": "myText",
          },
        ],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "STACKLAYOUT",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
      },
    ],
    "content": StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "myText",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "myText",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
    "firstLoad": true,
    "loaded": false,
    "nodeName": "SCROLLVIEW",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [
        VNode {
          "attributes": undefined,
          "children": Array [
            VNode {
              "attributes": undefined,
              "children": Array [
                VNode {
                  "attributes": Object {
                    "text": "myText",
                  },
                  "children": Array [],
                  "key": undefined,
                  "nodeName": "label",
                },
              ],
              "key": undefined,
              "nodeName": "stackLayout",
            },
          ],
          "key": undefined,
          "nodeName": "scrollView",
        },
      ],
      "key": undefined,
      "nodeName": "page",
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": undefined,
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              VNode {
                "attributes": Object {
                  "text": "myText",
                },
                "children": Array [],
                "key": undefined,
                "nodeName": "label",
              },
            ],
            "key": undefined,
            "nodeName": "stackLayout",
          },
        ],
        "key": undefined,
        "nodeName": "scrollView",
      },
    ],
    "key": undefined,
    "nodeName": "page",
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`nodeValueGetSet: expectation for undefined creation 1`] = `
StackLayout {
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [],
  "firstLoad": true,
  "loaded": false,
  "nodeName": "STACKLAYOUT",
  "nodeType": 1,
  "set": [Function],
}
`;

exports[`nodeValueGetSet: first child 1`] = `undefined`;

exports[`nodeValueGetSet: last child 1`] = `undefined`;

exports[`nodeValueGetSet: next sibling 1`] = `
Object {
  "nodeName": "erent",
}
`;

exports[`nodeValueGetSet: previous sibling 1`] = `
Object {
  "nodeName": "diff",
}
`;
